[gd_scene load_steps=4 format=2]

[ext_resource path="res://MiscRelated/GUIControlsRelated/PlayerGUI_SliderStandard/Assets/PlayerGUI_SliderStandard_Background.png" type="Texture" id=1]
[ext_resource path="res://MiscRelated/GUIControlsRelated/PlayerGUI_SliderStandard/PlayerGUI_SliderStandard.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]

[node name="PlayerGUI_SliderStandard" type="MarginContainer"]
margin_right = 96.0
margin_bottom = 136.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 106.0
margin_bottom = 165.0
texture = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 106.0
margin_bottom = 165.0

[node name="SliderMarginer" type="MarginContainer" parent="Control"]
margin_left = 45.0
margin_top = 8.0
margin_right = 61.0
margin_bottom = 108.0
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="VSlider" type="VSlider" parent="Control/SliderMarginer"]
margin_right = 16.0
margin_bottom = 100.0
focus_mode = 0
theme = SubResource( 1 )

[node name="ValueMarginer" type="MarginContainer" parent="Control"]
margin_top = 121.0
margin_right = 106.0
margin_bottom = 136.0

[node name="ValueLabel" type="Label" parent="Control/ValueMarginer"]
margin_right = 106.0
margin_bottom = 15.0
text = "10"
align = 1

[node name="NameMarginer" type="MarginContainer" parent="Control"]
margin_top = 132.0
margin_right = 106.0
margin_bottom = 163.0

[node name="NameLabel" type="Label" parent="Control/NameMarginer"]
margin_top = 8.0
margin_right = 106.0
margin_bottom = 23.0
text = "Example"
align = 1
valign = 1
